<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <ImageButton
        android:id="@+id/ib_profile_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/tv_today_dicover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/mulish_bold"
        android:text="Today Discover"
        android:textColor="@color/white"
        android:textSize="38sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_main"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:elevation="16dp"
        app:cardElevation="16dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_today_dicover" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                app:cardCornerRadius="20dp">

                <ImageView
                    android:id="@+id/iv_main_banner"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:contentDescription="@string/txt_image_view"
                    android:scaleType="centerCrop"
                    android:src="@drawable/news" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_highlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/card_image"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_highlight"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:fontFamily="@font/mulish_semibold" />

            <TextView
                android:id="@+id/tv_date_highlight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_highlight"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/txt_28_05_21"
                android:textSize="12sp"
                android:textColor="@color/black"
                android:fontFamily="@font/mulish_semibold"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <HorizontalScrollView
        android:id="@+id/hs_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/card_main">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tv_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_general"
                android:textSize="20sp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/white"
                android:fontFamily="@font/mulish_semibold"
                android:layout_marginBottom="8dp"/>
            <TextView
                android:id="@+id/tv_entertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_entertainment"
                android:textSize="20sp"
                android:layout_toEndOf="@id/tv_general"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/grey_topic"
                android:fontFamily="@font/mulish_semibold"/>
            <TextView
                android:id="@+id/tv_health"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_health"
                android:textSize="20sp"
                android:layout_toEndOf="@id/tv_entertainment"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/grey_topic"
                android:fontFamily="@font/mulish_semibold"/>
            <TextView
                android:id="@+id/tv_business"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_health"
                android:textSize="20sp"
                android:layout_toEndOf="@id/tv_health"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/mulish_semibold"
                android:textColor="@color/grey_topic"/>
            <TextView
                android:id="@+id/tv_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sport"
                android:textSize="20sp"
                android:layout_toEndOf="@id/tv_business"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/grey_topic"
                android:fontFamily="@font/mulish_semibold"/>
        </RelativeLayout>
    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hs_topic"
        tools:listitem="@layout/news_item" />

</androidx.constraintlayout.widget.ConstraintLayout>